--- a/public/index.html
+++ b/public/index.html
@@ -33,9 +33,9 @@
         <div class="nav-wrapper">
             <a href="#" class="brand-logo">Uber</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="sass.html">Services</a></li>
-                <li><a href="badges.html">About</a></li>
-                <li><a href="collapsible.html">Logout</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Logout</a></li>
             </ul>
         </div>
     </nav>
@@ -50,12 +50,27 @@
                     <div class="input-field">
                         <input id="search" type="search" required>
                         <label class="label-icon" for="search"><i class="material-icons"></i></label>
-                        <i class="material-icons">close</i>
+                        <i id='submit' class="material-icons">find me a ride</i>
                     </div>
                 </form>
             </div>
         </nav>
         <div id="mapid"></div>
+
+        <div class="row">
+            <div class="col s12 m6">
+                <div class="card blue-grey darken-1">
+                    <div class="card-content white-text">
+                        <span class="card-title">Estimated Time</span>
+                        <p id="days"></p>
+                        <p id="hours"></p>
+                        <p id="mins"></p>
+                        <p id="secs"></p>
+                        <h2 id="end"></h2>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
 
